# LogViewer

./: CMakeLists.txt  Jenkinsfile  Log4NetParser.cpp  Log4NetParser.h  LogEntry.cpp  LogEntry.h  LogModel.cpp  LogModel.h  LogModelProxy.cpp  LogModelProxy.h  LogParser.h  LogSource.cpp  LogSource.h  LogSourceFile.cpp  LogSourceFile.h  LogViewer.cpp  LogViewer.h  LogViewerSettings.cpp  LogViewerSettings.h  LogViewerSettingsDialog.cpp  LogViewerSettingsDialog.h  LogViewerSettingsWidget.cpp  LogViewerSettingsWidget.h  RegExpParserSettingsWidget.cpp  RegExpParserSettingsWidget.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: LogModelProxyTest.cpp  LogSourceTest.cpp
